<resources>
    <string name="app_name">assignment3</string>
    <string name="interest_back_tv">〈 관심종목 추가</string>
    <string name="interest_get_market_tv">증권사에서 가져오기</string>
    <string name="interest_save_tv">완료</string>
    <string name="interest_total_tv">전체</string>
    <string name="interest_inner_tv">국내</string>
    <string name="interest_outer_tv">해외·환율</string>
    <string name="main_stock_add_tv">종목추가</string>
    <string name="main_new_info_tv">뉴스/정보</string>
    <string name="main_current_tv">최근 조회</string>
    <string name="main_have_stock_tv">보유종목가져오기</string>
    <string name="main_attention_tv">관심그룹</string>
    <string name="main_interest_frg_tv">관심종목</string>
    <string name="main_community_tv">커뮤니티</string>
    <string name="main_trend_tv">증시동향</string>
    <string name="main_discover_tv">종목발굴</string>
    <string name="main_more_tv">더보기</string>
    <string name="recycler_item_order">주문</string>
    <string name="recycler_item_name">주식명</string>
    <string name="recycler_item_price">0,000</string>
    <string name="recycler_item_volume">0</string>
    <string name="recycler_item_dif">0</string>
    <string name="recycler_item_dif_per">00.00%</string>
    <string name="recycler_grid_item_order">주문</string>
    <string name="edit_tv">〈 편집</string>
    <string name="stock_edit_tv">종목 편집</string>
    <string name="group_edit_tv">그룹 편집</string>
    <string name="group_name_tv">그룹 이름</string>
    <string name="select_all_tv">전체선택</string>
    <string name="delete_tv">삭제</string>
    <string name="group_move_tv">그룹이동</string>
    <string name="complete_tv">완료</string>
    <string name="sort_standard_tv">정렬 기준</string>
    <string name="sort_not_tv">정렬안함</string>
    <string name="sort_per_tv">등락률</string>
    <string name="sort_dif_tv">등락</string>
    <string name="sort_volume_tv">거래량</string>
    <string name="sort_price_tv">가격</string>
    <string name="sort_benefit_ratio_tv">수익률</string>
    <string name="sort_benefit_price_tv">수익금</string>
    <string name="sort_buy_tv">매수금</string>
    <string name="sort_trade_tv">거래대금</string>
    <string name="sort_name_tv">가나다순</string>
    <string name="closing">닫기</string>
</resources>