<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="250dp"
        android:layout_height="500dp"
        android:layout_gravity="center">


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/sort_standard_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_standard_tv"
            android:textSize="20sp"
            android:textColor="@color/dark_red"
            android:padding="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/sort_not_tv"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/sort_not_tv"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:gravity="start|center_vertical"
            android:paddingStart="15dp"
            android:background="@drawable/grey_border"
            app:layout_constraintBottom_toTopOf="@+id/sort_per_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sort_standard_tv" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/sort_per_tv"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/sort_per_tv"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:gravity="start|center_vertical"
            android:background="@drawable/grey_border"
            android:paddingStart="15dp"
            app:layout_constraintTop_toBottomOf="@id/sort_not_tv"
            app:layout_constraintBottom_toTopOf="@+id/sort_dif_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/sort_dif_tv"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/sort_dif_tv"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:gravity="start|center_vertical"
            android:background="@drawable/grey_border"
            android:paddingStart="15dp"
            app:layout_constraintTop_toBottomOf="@id/sort_per_tv"
            app:layout_constraintBottom_toTopOf="@+id/sort_volume_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/sort_volume_tv"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/sort_volume_tv"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:gravity="start|center_vertical"
            android:background="@drawable/grey_border"
            android:paddingStart="15dp"
            app:layout_constraintTop_toBottomOf="@id/sort_dif_tv"
            app:layout_constraintBottom_toTopOf="@+id/sort_price_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/sort_price_tv"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/sort_price_tv"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:gravity="start|center_vertical"
            android:background="@drawable/grey_border"
            android:paddingStart="15dp"
            app:layout_constraintTop_toBottomOf="@id/sort_volume_tv"
            app:layout_constraintBottom_toTopOf="@+id/sort_benefit_ratio_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/sort_benefit_ratio_tv"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/sort_benefit_ratio_tv"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:gravity="start|center_vertical"
            android:background="@drawable/grey_border"
            android:paddingStart="15dp"
            app:layout_constraintTop_toBottomOf="@id/sort_price_tv"
            app:layout_constraintBottom_toTopOf="@+id/sort_benefit_price_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/sort_benefit_price_tv"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/sort_benefit_price_tv"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:gravity="start|center_vertical"
            android:background="@drawable/grey_border"
            android:paddingStart="15dp"
            app:layout_constraintTop_toBottomOf="@id/sort_benefit_ratio_tv"
            app:layout_constraintBottom_toTopOf="@+id/sort_buy_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/sort_buy_tv"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/sort_buy_tv"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:gravity="start|center_vertical"
            android:background="@drawable/grey_border"
            android:paddingStart="15dp"
            app:layout_constraintTop_toBottomOf="@id/sort_benefit_price_tv"
            app:layout_constraintBottom_toTopOf="@+id/sort_trade_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/sort_trade_tv"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/sort_trade_tv"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:gravity="start|center_vertical"
            android:background="@drawable/grey_border"
            android:paddingStart="15dp"
            app:layout_constraintTop_toBottomOf="@id/sort_buy_tv"
            app:layout_constraintBottom_toTopOf="@+id/sort_name_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/sort_name_tv"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/sort_name_tv"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:gravity="start|center_vertical"
            android:background="@drawable/grey_border"
            android:paddingStart="15dp"
            app:layout_constraintTop_toBottomOf="@id/sort_trade_tv"
            app:layout_constraintBottom_toTopOf="@+id/sort_close_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/sort_close_tv"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/closing"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:background="@drawable/grey_background"
            app:layout_constraintTop_toBottomOf="@id/sort_name_tv"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>