<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/recycler_item_candle"
        android:layout_width="10dp"
        android:layout_height="0dp"
        android:background="@color/bright_grey"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/recycler_item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recycler_item_name"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/recycler_item_candle"
        app:layout_constraintTop_toTopOf="@+id/recycler_item_order" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/recycler_item_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recycler_item_price"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/recycler_item_triangle"
        app:layout_constraintEnd_toEndOf="@+id/recycler_item_volume" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/recycler_item_volume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recycler_item_volume"
        android:textSize="12sp"
        android:textColor="@color/dark_grey"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/recycler_item_triangle"
        app:layout_constraintEnd_toStartOf="@+id/recycler_item_triangle"
        app:layout_constraintTop_toTopOf="@+id/recycler_item_triangle" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/recycler_item_triangle"
        android:layout_width="20dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginEnd="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/recycler_item_dif_per"
        app:layout_constraintEnd_toStartOf="@+id/recycler_item_dif_per"
        app:layout_constraintTop_toTopOf="@+id/recycler_item_dif_per"
        tools:text="▼" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/recycler_item_dif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recycler_item_dif"
        android:textColor="@color/black"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toTopOf="@id/recycler_item_dif_per"
        app:layout_constraintEnd_toEndOf="@+id/recycler_item_dif_per"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/recycler_item_dif_per"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:text="@string/recycler_item_dif_per"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:gravity="end"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/recycler_item_order"
        app:layout_constraintTop_toBottomOf="@+id/recycler_item_dif" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/recycler_item_order"
        android:layout_width="30dp"
        android:layout_height="0dp"
        android:background="@color/bright_grey"
        android:text="@string/recycler_item_order"
        android:textColor="@color/dark_grey"
        android:textSize="12sp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>